kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-crud-service
spec:
  selector:
    app: user-crud-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
