kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-crud-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bit.homework
      http:
        paths:
          - path: /bitapp/wasil/(.*)
            backend:
              serviceName: user-crud-service
              servicePort: 8000
